# my_login_manager

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: database.h  hash_password.h  logger.h  login_manager.h  sanitizer.h  udp_server.h
src/: database.cpp  hash_password.cpp  logger.cpp  login_manager.cpp  main.cpp  sanitizer.cpp  udp_server.cpp
tests/: test_api.cpp  test_hash_password.cpp  test_login_manager.cpp  test_sanitizer.cpp
